--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="random_scan_button_text">Random Scan</string>
     <string name="menu_description">Item Menu</string>
     <string name="toolbar_menu_title">Delete Sweep</string>
+    <string name="delete_entry">Delete entry</string>
+    <string name="view_pictures">View pictures</string>
+    <string name="take_picture">Take a picture</string>
 </resources>
