--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,11 @@
     <string name="app_name">Mobile Inventory</string>
     <string name="random_scan_button_text">Random Scan</string>
     <string name="menu_description">Item Menu</string>
-    <string name="toolbar_menu_title">Remove all</string>
+    <string name="remove_all">Remove all</string>
     <string name="remove_item">Remove item</string>
     <string name="view_pictures">View pictures</string>
     <string name="take_picture">Take a picture</string>
+    <string name="save_to_file">Save to file</string>
+    <string name="switch_to_preload">Switch to preload</string>
+    <string name="switch_to_inventory">Switch to inventory</string>
 </resources>
