--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="cancel_save">Cancel save</string>
     <string name="inventory_barcodes_column_title">Barcode</string>
     <string name="inventory_location_column_title">Location</string>
+    <string name="total_locations_title_string">Locations:</string>
 </resources>
