Removed many unnecessary global variables Replaced scanner code with library Now compatible with   janam     XM5 - Jelly Bean     XT2 - Lollipop     XT2+     XM75 - Marshmallow     XT100 - Marshmallow     XG200   zebra     ET5X - Lollipop, Marshmallow     MC18 - Lollipop     MC32N0 - Lollipop     MC33 - Nougat     MC40 - Lollipop     TC20 - Nougat     TC25 - Nougat     TC51 - Marshmallow, Nougat     TC56 - Marshmallow, Nougat     TC70 - Lollipop     TC70x - Marshmallow, Nougat     TC75 - Lollipop     TC75x - Marshmallow, Nougat     TC8000 - Lollipop     VC80x - Nougat     WT6000 - Lollipop Replaced some hardcoded string with resources Using lambda expressions now

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="inventory_location_column_title">Location</string>
     <string name="total_locations_title_string">Locations:</string>
     <string name="continuous_mode_title">Continuous mode</string>
+    <string name="action_yes">Yes</string>
+    <string name="action_no">No</string>
 </resources>
